# pkgtreediff

./: .stack-all  .travis.yml  CHANGELOG.md  MAINTAINER-NOTES  Main.hs  Makefile  README.md  TODO  cabal.project  pkgtreediff.cabal  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts16.yaml  stack-lts18.yaml  stack.yaml
.github/workflows/: build.yml
src/: Main.hs
src/Distribution/RPM/: PackageTreeDiff.hs
test/: tests.hs
test/files/: make.sh
