cabal-version:       2.0
name:                pkgtreediff
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/juhp/pkgtreediff
bug-reports:         https://github.com/juhp/pkgtreediff/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/juhp/pkgtreediff.git

executable pkgtreediff
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base >= 4.9.1.0 && < 4.13
                     
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
