cabal-version:       1.18
name:                pkgtreediff
version:             0.1
synopsis:            Package tree diff tool
description:         Tool for comparing package files in OS trees
homepage:            https://github.com/juhp/pkgtreediff
bug-reports:         https://github.com/juhp/pkgtreediff/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Util
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/juhp/pkgtreediff.git

executable pkgtreediff
  main-is:             Main.hs
  other-modules:       Paths_pkgtreediff

  build-depends:       async
                     , base < 5
                     , directory
                     , http-directory
                     , simple-cmd-args
                     , text

  ghc-options:         -Wall -fwarn-missing-signatures

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
